--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.html
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.html
@@ -14,7 +14,7 @@
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
-    <title>SFAWeb</title>
+    <title>SFA :: Revolution</title>
     
     <!--                                           -->
     <!-- This script loads your compiled module.   -->
