--- a/src/main/java/ar/com/nextel/sfa/public/SFAWeb.html
+++ b/src/main/java/ar/com/nextel/sfa/public/SFAWeb.html
@@ -22,6 +22,17 @@
     <!-- be added before this line.                -->
     <!--                                           -->
     <script type="text/javascript" language="javascript" src="ar.com.nextel.sfa.SFAWeb.nocache.js"></script>
+
+    <!--                                           -->
+    <!-- Evita que la tecla backspace actue como boton atras. -->
+    <!--                                           -->
+    <script>
+      function checkShortcut() {
+        if(event.keyCode==8 ¦¦ event.keyCode==13)  {
+          return false;
+        }
+      }
+    </script> 
   </head>
 
   <!--                                           -->
@@ -29,7 +40,7 @@
   <!-- you can leave the body empty if you want  -->
   <!-- to create a completely dynamic UI.        -->
   <!--                                           -->
-  <body>
+  <body onkeydown="return checkShortcut()">
 
     <!-- OPTIONAL: include this if you want history support -->
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
